--- a/代码自动化检查.md
+++ b/代码自动化检查.md
@@ -80,7 +80,7 @@
 - 安装eslint  
 npm i -D eslint babel-eslint eslint-plugin-import  
 - 安装prettier  
-npm install --save-dev prettier eslint-plugin-prettier eslint-config-prettier  
+npm install --save-dev prettier eslint-plugin-prettier eslint-config-prettier pretty-quick  
 - 安装husky，lint-staged    
 npm i -D husky lint-staged  
 #### 参考链接  
